# macro-checker

./: .gitignore  LICENSE
Food-Journaling-App/: CMakeLists.txt  Main.qml  main.cpp
Food-Journaling-App/UI-Items/: PredictionCard.qml
Food-Journaling-App/backend/: nutritionpredictor.cpp  nutritionpredictor.h  textpreprocessor.cpp  textpreprocessor.h
Food-Journaling-App/controller/: appcontroller.cpp  appcontroller.h
Food-Journaling-App/models/: nutrition_model.onnx  output_scaler_params.json  vectorizer_vocab.json
Python-Work/: debug_json_structure.py  extract_json_to_database.py  generate_training_data.py  train_model.py
